--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  intl: ^0.19.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
   extended_image: ^8.2.0
   google_fonts: ^6.2.0
   fluttertoast: ^8.2.4
+  dropdown_button2: ^2.3.9
+  shimmer: ^3.0.0
+  # Firebase
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
+  firebase_storage: ^11.6.6
+  cloud_firestore: ^4.15.5
+
+  syncfusion_flutter_datepicker: ^24.2.9
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +75,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
